# rospit2

./: LICENSE  README.md
rospit2/: README.md  package.xml
rospit2/rospit2/: test_runner.py  test_script.py
rospit_msgs/msg/: PoseEvaluation.msg  TestSuite.msg
src/rospit2/: LICENSE  package.xml  setup.cfg  setup.py
src/rospit2/examples/: move_turtlebot.xml  move_turtlesim.xml  move_turtlesim_embedded_parameters.xml  move_turtlesim_no_invariants_no_parameters.xml  move_turtlesim_no_parameters.xml  move_turtlesim_parameters.csv  move_turtlesim_parameters.xml  move_turtlesim_requiring_parameters.xml  move_turtlesim_using_parameters_file.xml  turtlesim_mbt.xml  turtlesim_session.xml
src/rospit2/rospit2/: __init__.py  binary.py  category.py  declarative.py  framework.py  numeric.py  ros.py  ros_parameters.py  ros_steps.py  rospit_session_xml.py  rospit_test_runner.py  rospit_xml.py  run_session.py  run_test.py  run_test_suite.py  run_tests.py  test_runner.py  test_script.py  turtlesim_mbt.py
src/rospit2/rospit2/xml/: rospit.xsd  session.xsd
src/rospit2/scripts/: run_tests.py
src/rospit_msgs/: CMakeLists.txt  package.xml
src/rospit_msgs/action/: ExecuteXMLTestSuite.action
src/rospit_msgs/msg/: ConditionEvaluationPairStamped.msg  Evaluation.msg  MovementEvaluation.msg  Parameter.msg  Point2DEvaluation.msg  TestSuiteReport.msg
src/rospit_msgs/srv/: MBTIterator.srv
